--- a/NLP/Pytorch/10.4 Input Feeding.ipynb
+++ b/NLP/Pytorch/10.4 Input Feeding.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7139a0e3",
+   "id": "71b16c5c",
    "metadata": {},
    "source": [
     " "
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6403d5",
+   "id": "6c4bb6eb",
    "metadata": {},
    "source": [
     "### 파이토치 예제"
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28da807f",
+   "id": "7d610285",
    "metadata": {},
    "source": [
     "#### Attention Class"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "169a662d",
+   "id": "61874a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "666ca007",
+   "id": "3e3737d3",
    "metadata": {},
    "source": [
     " "
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bc13a41",
+   "id": "982466d1",
    "metadata": {},
    "source": [
     "#### Attention을 위한 마스크 생성"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21129337",
+   "id": "073382b6",
    "metadata": {},
    "source": [
     "Attention class를 살펴보면 마스크의 존재 여부에 따라 `masked_fill_`함수를 수행하는 것을 볼 수 있습니다. 미니배치 내부의 문장들은 길이 서로 다를 수 있으므로, 마스킹을 통해 선택적으로 어텐션을 수행하려는 것입니다. 미니배치의 크기는 미니배치 내부의 가장 긴 문장의 길이에 좌우됩니다. 길이가 짧은 문장들은 문장의 종류 후에 Padding으로 채워집니다.\n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31bad4d4",
+   "id": "5c22533a",
    "metadata": {},
    "source": [
     " "
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79cf2466",
+   "id": "455a7e6f",
    "metadata": {},
    "source": [
     "#### Encoder Class"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9671e359",
+   "id": "7ca71fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7039e729",
+   "id": "d39cc462",
    "metadata": {},
    "source": [
     " "
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8a9c559",
+   "id": "3c3c1f60",
    "metadata": {},
    "source": [
     "#### Decoder Class"
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19d6f3b",
+   "id": "45f12e9e",
    "metadata": {},
    "source": [
     "Decoder는 한 time-step씩 입력받아 동작하도록 설계되어 있습니다. 또한 인코더와 달리 이전 time-step의 $\\tilde{h}$를 받아 이어붙여 RNN의 입력을 만들어줍니다. 따라서 디코더 RNN의 입력 크기는 단순히 단어 임베딩 벡터의 크기가 아니라 hidden_size가 더해진 값이 선언됩니다."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa76f33b",
+   "id": "bd2089d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d37d1ba9",
+   "id": "d2ee4cda",
    "metadata": {},
    "source": [
     " "
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d297003",
+   "id": "716ec4d5",
    "metadata": {},
    "source": [
     "#### Generator Class"
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "58e7c7b5",
+   "id": "5ac26f48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403ad980",
+   "id": "2132d7c5",
    "metadata": {},
    "source": [
     " "
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8074e7d5",
+   "id": "34512cef",
    "metadata": {},
    "source": [
     "#### Seq2seq Class"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb4aa529",
+   "id": "13df55cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c236eca",
+   "id": "677c2101",
    "metadata": {},
    "source": [
     " "
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96b7d722",
+   "id": "2dff65c8",
    "metadata": {},
    "source": [
     "#### 인코더의 은닉 상태를 디코더의 은닉 상태로 변환하기"
@@ -655,23 +655,187 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6902f439",
+   "id": "d9f6aba0",
    "metadata": {},
    "source": [
     "인코더는 양방향 LSTM으로 구성됩니다. 양방향 LSTM은 방향의 개수만큼 은닉 상태를 갖기때문에, 단방향 LSTM과 다른 은닉 상태 형태를 가집니다. 즉, 양방향 LSTM은 **\"2 x 계층의 개수\"** 만큼의 은닉 상태를 가집니다. 인코더의 마지막 time-step의 은닉 상태는 디코더의 초기 은닉 상태가 될 것이므로, 그 크기를 맞춘 다음에 디코더의 은닉 상태로 넣어주어야 합니다. 이를 위해 우리는 애초에 인코더의 hidden_size를 원래 반으로 사용했습니다. 다음처럼 텐서의 위치를 조작하여 디코더의 은닉 상태에 알맞은 형태로 만들어줄 수 있습니다.\n",
     "\n",
     "<br></br>\n",
     "![](./images/10-5-1-hiddenstate.jpg)\n",
-    "<br></br>"
+    "<br></br>\n",
+    "\n",
+    "이를 코드로 나타내면 다음과 같습니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c262a448",
+   "execution_count": 8,
+   "id": "65cb1b84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge_encoder_hiddens(self, encoder_hiddens):\n",
+    "    new_hiddens = []\n",
+    "    new_cells = []\n",
+    "    \n",
+    "    hiddens, cells = encoder_hiddens\n",
+    "    \n",
+    "    ## i-th and (i+1)-st layer is in the opposite direction.\n",
+    "    ## Also, each direction of layer is half hidden size\n",
+    "    ## Therefore, we concatenate both directions to 1 hidden size layer\n",
+    "    \n",
+    "    for i in range(0, hidden.size(0), 2):\n",
+    "        new_hiddens += [torch.cat([hiddens[i], hiddens[i+1]], dim = -1)]\n",
+    "        new_cells += [torch.cat([cells[i], cells[i+1]], dim = -1)]\n",
+    "        \n",
+    "    new_hiddens, new_cells = torch.stack(new_hiddens), torch.stack(new_cells)\n",
+    "    \n",
+    "    return (new_hiddens, new_cells)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8785f9e9",
+   "metadata": {},
+   "source": [
+    "for 반복문을 사용하여 순차적으로 처리했습니다. 이는 연산적으로 매우 비효율적이고 비쌉니다. 이를 병렬 작업으로 변환해줍니다. 이러한 코드를 사용함으로써, 앞의 함수를 호출하지 않고 병렬 연산을 통해 인코더의 은닉 상태를 디코더의 은닉 상태로 변환할 수 있습니다.\n",
+    "\n",
+    "```python\n",
+    "## Merge bidirectional to uni-directional\n",
+    "## We need to convert size from (n_layers *2, batch_size, hidden_size/2) to (n_layers, batch_size, hidden_size)\n",
+    "h_0_tgt, c_0_tgt = h_0_tgt\n",
+    "h_0_tgt = h_0_tgt.transpose(0, 1).contiguous().view(batch_size,\n",
+    "                                                    -1,\n",
+    "                                                    self.hidden_size).transpose(0, 1).continguous()\n",
+    "\n",
+    "c_0_tgt = c_0_tgt.transpose(0, 1).contiguous().view(batch_size,\n",
+    "                                                    -1,\n",
+    "                                                    self.hidden_size).transpose(0, 1).continguous()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87cbe5c5",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55f9aedc",
+   "metadata": {},
+   "source": [
+    "#### 포워드 함수 정의"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3faa7c71",
+   "metadata": {},
+   "source": [
+    "다음은 seq2seq의 전체 피드포워드 동작에 대한 정의입니다.\n",
+    "\n",
+    "인코더는 time-step에 관해 한번에 연산을 수행하지만, 디코더의 경우 input feeding때문에 for 반복문을 사용하여 타깃 문장의 길이만큼의 time-step을 반복 수행합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "454ca6de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward(self, src, tgt):\n",
+    "    batch_size = tgt.size(0)\n",
+    "    \n",
+    "    mask = None\n",
+    "    x_length = None\n",
+    "    \n",
+    "    if isinstance(src, tuple):\n",
+    "        ## Based on the length information,\n",
+    "        ## generate mask to prevent shorter samples from having wasted attention.\n",
+    "        x, x_length = src\n",
+    "        \n",
+    "        ## |mask| = (batch_size, length)\n",
+    "        mask = self.generate_mask(x, x_length)\n",
+    "        \n",
+    "    else:\n",
+    "        x = src\n",
+    "        \n",
+    "    if isinstance(tgt, tuple):\n",
+    "        tgt = tgt[0]\n",
+    "        \n",
+    "    ## Get word embedding vectors for every time-step of input sentence.\n",
+    "    ## |emb_src| = (batch_size, length, word_vec_dim)\n",
+    "    emb_src = self.emb_src(x)\n",
+    "    \n",
+    "    ## The last hidden state of the encoder would be an initial hidden state of decoder\n",
+    "    ## |h_src| = (batch_size, length, hidden_size)\n",
+    "    ## |h_0_tgt| = (n_layers * 2, batch_size, hidden_size / 2)\n",
+    "    h_src, h_0_tgt = self.encoder((emb_src, x_length))\n",
+    "    \n",
+    "    ## Merge bidirectional to uni-directional\n",
+    "    ## We need to convert size from (n_layers *2, batch_size, hidden_size/2) to (n_layers, batch_size, hidden_size)\n",
+    "    h_0_tgt, c_0_tgt = h_0_tgt\n",
+    "    h_0_tgt = h_0_tgt.transpose(0, 1).contiguous().view(batch_size,\n",
+    "                                                        -1,\n",
+    "                                                        self.hidden_size).transpose(0, 1).continguous()\n",
+    "\n",
+    "    c_0_tgt = c_0_tgt.transpose(0, 1).contiguous().view(batch_size,\n",
+    "                                                        -1,\n",
+    "                                                        self.hidden_size).transpose(0, 1).continguous()\n",
+    "    \n",
+    "    ## |h_src| = (batch_size, length, hidden_size)\n",
+    "    ## |h_0_tgt| = (n_layers, batch_size, hidden_size)\n",
+    "    h_0_tgt = (h_0_tgt, c_0_tgt)\n",
+    "    \n",
+    "    ## |emb_tgt| = (batch_size, length, word_vec_dim)\n",
+    "    emb_tgt = self.emb_dec(tgt)\n",
+    "    \n",
+    "    h_tilde = []\n",
+    "    h_t_tilde = None\n",
+    "    \n",
+    "    decoder_hidden = h_0_tgt\n",
+    "    \n",
+    "    ## Run decoder until the end of the time-step.\n",
+    "    \n",
+    "    for t in range(tgt.size(1)):\n",
+    "        ## Teacher forcing: take each input from training set\n",
+    "        ## not from the last time-step's output\n",
+    "        ## Because of Teacher Forcing, training procedure and infrerence procedure becomes different.\n",
+    "        ## Of course, because of sequential running in decoder, this causes severe bottleneck.\n",
+    "        \n",
+    "        ## |emb_t| = (batch_size, 1, word_vec_dim)\n",
+    "        ## |h_t_tilde| = (batch_size, 1, hidden_size)\n",
+    "        emb_t = emb_tgt[:, t, :].unsqueeze(1)\n",
+    "        \n",
+    "        ## |decoder_output| = (batch_size, 1, hidden_size)\n",
+    "        ## |decoder_hidden| = (n_layers, batch_size, hidden_size)\n",
+    "        decoder_output, decoder_hidden = self.decoder(emb_t,\n",
+    "                                                      h_t_tilde,\n",
+    "                                                      decoder_hidden)\n",
+    "        \n",
+    "        ## |context_vector| = (batch_size, 1, hidden_size)\n",
+    "        context_vector = self.attn(h_src, decoder_output, mask)\n",
+    "        \n",
+    "        ## |h_t_tilde| = (batch_size, 1, hidden_size)\n",
+    "        h_t_tilde = self.tanh(self.concat(torch.cat([decoder_output,\n",
+    "                                                    context_vector], dim = -1)))\n",
+    "        \n",
+    "        \n",
+    "        h_tilde += [h_t_tilde]\n",
+    "        \n",
+    "    ## |h_tilde| = (batch_size, length, hidden_size)\n",
+    "    h_tilde = torch.cat(h_tilde, dim = 1)\n",
+    "    \n",
+    "    ## |y_hat| = (batch_size, length, output_size)\n",
+    "    y_hat = self.generator(h_tilde)\n",
+    "    \n",
+    "    return y_hat      \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
